--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Alice&family=Assistant:wght@500&family=Kalam:wght@300&family=Poppins:wght@300&display=swap");
 html {
+  width: 100%;
   scroll-behavior: smooth;
 }
 * {
@@ -7,8 +8,12 @@ html {
   padding: 0;
   box-sizing: border-box;
 }
+.no-wrap {
+  white-space: nowrap;
+}
 
 body {
+  width: 100%;
   background: rgb(13, 0, 38);
   color: white;
   font-family: "Poppins", sans-serif;
@@ -34,7 +39,7 @@ nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  gap: 25%;
+  gap: clamp(15px, 25vw, 600px);
   background: rgb(37 18 76);
   padding: 12px 0;
   overflow: hidden;
@@ -51,9 +56,11 @@ nav {
   -webkit-background-clip: text;
   color: transparent;
 }
-.sign a:hover {
-  text-shadow: 0 2px 10px rgb(166, 127, 243);
-  transition: 0.7s;
+.sign a:hover,
+.sign a:focus,
+nav ul li a:hover,
+nav ul li a:focus {
+  filter: brightness(150%);
 }
 
 nav ul {
@@ -64,11 +71,6 @@ nav ul {
 nav ul li {
   list-style: none;
   margin: 0 20px;
-}
-nav ul li a:hover {
-  list-style: none;
-  font-size: 1rem;
-  color: rgb(186, 172, 214);
 }
 
 a {
@@ -94,6 +96,21 @@ a {
 .right-img img {
   width: 90%;
   height: auto;
+  animation: float 5s ease-in-out infinite alternate forwards;
+}
+@keyframes float {
+  0% {
+    transform: translateY(0);
+  }
+  33% {
+    transform: translateY(-20px) rotate(-2deg);
+  }
+  66% {
+    transform: translateY(20px) rotate(2deg);
+  }
+  100% {
+    transform: translateY(0) rotate(0deg);
+  }
 }
 
 .purple {
@@ -309,16 +326,144 @@ footer {
   display: block;
   margin: 25px 0 0 0;
 }
+.total-list {
+  display: flex;
+  justify-content: flex-end;
+}
+.total-list .menu-button {
+  display: none;
+}
 
 /* || Media queries for 1200px  */
 
 @media screen and (max-width: 1200px) {
-  nav {
-    gap: 20%;
+  .nav-bar > div {
+    margin: 0 25px;
+    transition: 0.2s;
   }
-
   .home > div,
   .about > div {
-    width: 37%;
+    width: 40%;
+  }
+  .tech {
+    height: min(30vw, 600px);
+  }
+}
+
+@media screen and (max-width: 992px) {
+  nav {
+    justify-content: center;
+    gap: min(15vw, 60px);
+    transition: 0.2s;
+  }
+  .left-info {
+    font-size: 2em;
+  }
+  .about {
+    font-size: 1rem;
+  }
+  .img-logo {
+    width: 70px;
+    position: relative;
+    top: 25px;
+    left: -35px;
+  }
+  .tech {
+    height: min(35vw, 600px);
+  }
+  .single-warap {
+    width: min(35vw, 22rem);
+    height: min(50vw, 80rem);
+  }
+}
+
+@media screen and (max-width: 548px) {
+  nav ul,
+  main,
+  footer {
+    display: none;
+  }
+  .total-list .menu-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+  }
+  body {
+    font-size: 0.7em;
+  }
+  .menu-button {
+    width: 35px;
+    height: 35px;
+    border: none;
+    background-color: transparent;
+    /* THIS 3 property make the hamberger div in center */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: relative;
+  }
+
+  .menu-icon,
+  .menu-icon::before,
+  .menu-icon::after {
+    background-color: white;
+    width: 30px;
+    height: 3px;
+    border-radius: 5px;
+    /* It is necessary to position it absolute, so parent class is relative */
+    position: absolute;
+  }
+
+  .menu-icon::before,
+  .menu-icon::after {
+    /* AS psudo element is used, so content is necessary */
+    content: "";
+  }
+
+  .menu-icon::before {
+    /* It upholds the before div to upside */
+    transform: translate(-15px, -8px);
+  }
+
+  .menu-icon::after {
+    /* It push the after div to downside */
+    transform: translate(-15px, 8px);
+  }
+
+  /* TRANSITIONS LIMIT */
+  .menu-icon::after,
+  .menu-icon::before,
+  .menu-icon {
+    transition: all 0.5s ease 0s;
+  }
+
+  .menu-button:hover .menu-icon,
+  .menu-button:focus .menu-icon {
+    background: transparent;
+  }
+
+  /* TRANSFORMATION OF HAMBERGER- before  to one cross edge*/
+  .menu-button:hover .menu-icon::before,
+  .menu-button:focus .menu-icon::before {
+    transform: translateX(-20px) rotate(45deg);
+  }
+
+  /* TRANSFORMATION OF HAMBERGER- after to two cross egdge */
+  .menu-button:hover .menu-icon::after,
+  .menu-button:focus .menu-icon::after {
+    transform: translateX(-20px) rotate(-45deg);
+  }
+
+  .menu-button:hover nav ul,
+  .menu-button:focus nav ul {
+    display: block;
+  }
+
+  nav {
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.1rem 0;
   }
 }
