--- a/style.css
+++ b/style.css
@@ -526,4 +526,20 @@ footer {
     align-items: center;
     padding: 0.5rem 0;
   }
+
+  .social-handle ul li img {
+    width: 3.5rem;
+  }
+
+  .about {
+    /* display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 50px 0;
+    font-size: 1.2rem; */
+    flex-direction: column;
+  }
+  .about > div {
+    width: 80%;
+  }
 }
