--- a/style.css
+++ b/style.css
@@ -546,16 +546,17 @@ footer {
 
   .tech {
     height: max-content;
-    margin-top: 50px;
+    margin-top: 30px;
   }
-  .tech h1 {
+  .tech h1,
+  .project h1 {
     font-size: 24px;
   }
 
   .box {
     background: none;
     width: 80vw;
-    height: min(80vw, 600px);
+    height: fit-content;
     margin: 30px auto;
     display: flex;
     justify-content: space-evenly;
@@ -571,13 +572,32 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-
     width: 100%;
     height: auto;
+    background-color: rgb(31 10 74);
+    padding: 0.5rem 1rem;
+    margin: 10px 0;
+    overflow: auto;
+    column-gap: 2px;
+  }
+  .verticle-line:nth-child(odd) {
+    border-radius: 10px 100px 100px 110px;
+    box-shadow: -2px 1px 8px rgb(47, 33, 87);
+  }
+  .verticle-line:nth-child(even) {
+    flex-direction: row-reverse;
+    border-radius: 100px 117px 10px 100px;
+    box-shadow: 2px 1px 8px rgb(47, 33, 87);
   }
 
+  .verticle-line:nth-child(odd) .link {
+    border-radius: 0 100px 100px 0;
+  }
+  .verticle-line:nth-child(even) .link {
+    border-radius: 100px 0 0 100px;
+  }
   .img-logo {
-    width: 10vw;
+    width: 13vw;
     height: auto;
     position: static;
   }
@@ -585,7 +605,8 @@ footer {
   .verticle-line img + span {
     position: static;
     display: inline-block;
-    width: 50px;
+    width: 0px;
+    display: none;
   }
 
   .link {
@@ -594,6 +615,10 @@ footer {
     border-radius: 20px;
     background: rgb(101 69 195);
     box-shadow: 0px 0px 3px 0px rgb(182 128 255);
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    font-size: 12px;
   }
   .link img {
     position: static;
@@ -603,5 +628,50 @@ footer {
 
   #display-548px {
     display: block;
+  }
+
+  main hr {
+    margin: 2rem 3rem 0;
+    box-shadow: 0px 12px 25px 0px;
+  }
+
+  .flex-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: nowrap;
+    width: 100%;
+    margin: auto;
+  }
+
+  .single-warap {
+    display: flex;
+    justify-content: normal;
+    align-items: normal;
+    flex-direction: column;
+    row-gap: 12px;
+    width: 90%;
+    height: max-content;
+    margin: 0.8rem auto;
+  }
+
+  .go-link {
+    position: static;
+    cursor: pointer;
+    width: 40%;
+    margin: 0.5rem auto;
+  }
+  .go-link button {
+    width: 100%;
+    height: max-content;
+    font-size: 1.3em;
+    padding: 1.2px;
+  }
+  .head-desc {
+    margin-top: 0px;
+  }
+  .head-desc p {
+    padding: 5px;
   }
 }
