--- a/style.css
+++ b/style.css
@@ -592,9 +592,13 @@ footer {
 
   .verticle-line:nth-child(odd) .link {
     border-radius: 0 100px 100px 0;
+    box-shadow: 0px 0px 17px 3px black;
+    font-size: 14px;
   }
   .verticle-line:nth-child(even) .link {
     border-radius: 100px 0 0 100px;
+    box-shadow: 0px 0px 17px 3px black;
+    font-size: 14px;
   }
   .img-logo {
     width: 13vw;
