--- a/style.css
+++ b/style.css
@@ -319,12 +319,13 @@ footer {
 .footer div {
   text-align: start;
 }
-.footer-secind ul {
+.footer-second ul {
   list-style-type: none;
 }
 .footer-first img {
   border-radius: 20%;
-  width: 3.8rem;
+  width: 35%;
+  height: auto;
 }
 #footer-right {
   color: grey;
@@ -677,5 +678,25 @@ footer {
   }
   .head-desc p {
     padding: 5px;
+  }
+
+  .footer {
+    flex-wrap: wrap;
+    row-gap: 5px;
+    justify-content: space-around;
+    /* font-size: 16px; */
+  }
+  .social-handle {
+    margin-top: 10px;
+  }
+  .footer-second {
+    font-size: 14px;
+  }
+  .footer .social-handle ul li img {
+    width: 4em;
+  }
+  .footer-second ul li {
+    border-bottom: 2px solid grey;
+    margin-bottom: 3px;
   }
 }
