--- a/style.css
+++ b/style.css
@@ -197,6 +197,7 @@ a {
   width: 50px;
 }
 .link {
+  display: none;
   position: relative;
   top: 40px;
   left: -23px;
@@ -205,10 +206,24 @@ a {
   background: rgb(101 69 195);
   box-shadow: 0px 0px 3px 0px rgb(182 128 255);
 }
-.link img {
+
+.btn {
   position: relative;
-  top: 8px;
-  width: 20px;
+  top: 40px;
+  left: -25px;
+  display: flex;
+  padding: 8px;
+  font-size: 1.2em;
+  gap: 5px;
+  justify-content: center;
+  align-items: center;
+  width: clamp(50px, 20vw, 80px);
+  border: none;
+  background-image: linear-gradient(45deg, rgb(13 0 38), ta);
+  background-image: linear-gradient(90deg, rgb(125 75 226), rgb(37 18 76));
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
 }
 #full-socio {
   margin-top: 3rem;
@@ -230,7 +245,7 @@ a {
 }
 
 .social-handle ul li img {
-  width: 3rem;
+  width: clamp(20px, 10vw, 60px);
 }
 
 .tech {
@@ -354,6 +369,34 @@ footer {
   .tech {
     height: min(30vw, 600px);
   }
+
+  .btn:hover,
+  .btn:focus .btn {
+    display: block;
+    width: max-content;
+    position: relative;
+    top: 50px;
+    left: -97px;
+  }
+
+  /* .btn {
+    position: relative;
+    top: 40px;
+    left: -25px;
+    display: flex;
+    padding: 8px;
+    font-size: 1.2em;
+    gap: 5px;
+    justify-content: center;
+    align-items: center;
+    width: clamp(50px, 20vw, 80px);
+    border: none;
+    background-image: linear-gradient(45deg, rgb(13 0 38), ta);
+    background-image: linear-gradient(90deg, rgb(125 75 226), rgb(37 18 76));
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+  } */
 }
 
 @media screen and (max-width: 992px) {
@@ -533,9 +576,9 @@ footer {
     padding: 0.5rem 0;
   }
 
-  .social-handle ul li img {
+  /* .social-handle ul li img {
     width: 3.5rem;
-  }
+  } */
 
   .about {
     flex-direction: column;
@@ -615,6 +658,7 @@ footer {
   }
 
   .link {
+    display: block;
     position: static;
     padding: 0.5rem;
     border-radius: 20px;
@@ -692,11 +736,23 @@ footer {
   .footer-second {
     font-size: 14px;
   }
-  .footer .social-handle ul li img {
+  /* .footer .social-handle ul li img {
     width: 4em;
-  }
+  } */
   .footer-second ul li {
     border-bottom: 2px solid grey;
     margin-bottom: 3px;
+  }
+  .btn {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 325px) {
+  .no-wrap {
+    white-space: normal;
+  }
+  .btn {
+    display: none;
   }
 }
