--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 html {
   width: 100%;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 * {
   margin: 0;
@@ -17,6 +18,10 @@ body {
   background: rgb(13, 0, 38);
   color: white;
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
+}
+img {
+  display: block;
 }
 
 .display-bottom {
@@ -37,7 +42,7 @@ main hr {
 header {
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 10;
 }
 nav {
   display: flex;
@@ -88,7 +93,16 @@ a {
   justify-content: space-around;
   align-items: center;
   margin: 50px 0;
+  position: relative;
 }
+
+#fade-name {
+  position: absolute;
+  bottom: -25%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .home > div,
 .about > div {
   width: 35%;
@@ -151,12 +165,16 @@ a {
 }
 
 #hire-btn {
-  background-image: linear-gradient(90deg, rgb(125 75 226), rgb(37 18 76));
+  background-image: linear-gradient(90deg, rgb(64, 29, 136), rgb(37 18 76));
   font-size: 1rem;
   padding: 5px 10px;
-  font-weight: 900;
+  font-weight: 700;
   position: relative;
+  letter-spacing: 1.2px;
+  box-shadow: 4px 4px 6px -3px #000;
+  transition: all 0.2s linear 0s;
   z-index: 1;
+  cursor: pointer;
 }
 
 #hire-btn::before {
@@ -164,19 +182,18 @@ a {
   position: absolute;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 0;
+  width: 100%;
+  height: 100%;
   transform: scaleX(0);
-  transition: all 0.2s linear 0s;
   background-color: rgb(37 18 76);
   transform-origin: left;
-  cursor: pointer;
+  z-index: -1;
 }
 
 #hire-btn:hover::before,
 #hire-btn:active::before {
   transform: scaleX(1);
+  z-index: -1;
 }
 
 .grey {
@@ -213,6 +230,20 @@ a {
   margin: 30px 0;
   display: flex;
   justify-content: space-around;
+  box-shadow: 0px -1px 20px 2px whitesmoke;
+  animation: on-off 2s linear 0s infinite forwards;
+}
+
+@keyframes on-off {
+  50% {
+    box-shadow: 0px -1px 25px 2px rgb(125 75 226);
+  }
+  70% {
+    box-shadow: 0px -1px 15px 2px rgb(36, 10, 87);
+  }
+  100% {
+    box-shadow: 0px -1px 20px 2px whitesmoke;
+  }
 }
 .verticle-line {
   height: 3vw;
@@ -288,7 +319,20 @@ a {
   max-width: 83vw;
   margin: auto;
   height: 45vh;
+  position: relative;
 }
+.faded-text {
+  font-size: 5rem;
+  color: rgb(255 248 248 / 15%);
+  font-weight: bold;
+  user-select: none;
+}
+#fade-tech {
+  position: absolute;
+  right: -20%;
+  top: -20%;
+}
+
 .project {
   max-width: 83vw;
   margin: 50px auto;
@@ -312,17 +356,66 @@ a {
   box-shadow: rgb(101 69 195 / 50%) 0px 4px 12px;
   border-radius: 15px;
 }
+
 .single-warap:hover {
-  cursor: pointer;
   background: rgb(17, 0, 48);
 }
 
 .single-warap img {
   width: 100%;
-  height: 50%;
+  height: 100%;
   background-attachment: fixed;
+  transition: all 0.3s ease-in-out 0s;
+}
+.faded-box {
+  width: 100%;
+  height: 50%;
+  position: relative;
+  overflow: hidden;
   border-radius: 15px;
 }
+.faded-box span {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+  font-size: 1rem;
+  color: rgb(0, 252, 21);
+  text-shadow: 0 0 6px greenyellow;
+  opacity: 0;
+  transition: all 0.3s ease-in-out 0s;
+  z-index: 1;
+}
+
+.faded-box::before {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.754);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: scaleY(0);
+  transition: all 0.3s ease-in-out 0s;
+  transform-origin: top;
+  z-index: 1;
+}
+
+.faded-box:hover::before,
+.faded-box:active::before {
+  transform: scaleY(1);
+}
+.faded-box:hover span,
+.faded-box:hover span {
+  top: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 1;
+}
+
+.faded-box:hover img {
+  transform: scale(1.2);
+}
+
 .single-warap div {
   font-size: 14px;
 }
@@ -414,25 +507,6 @@ footer {
     top: 50px;
     left: -97px;
   }
-
-  /* .btn {
-    position: relative;
-    top: 40px;
-    left: -25px;
-    display: flex;
-    padding: 8px;
-    font-size: 1.2em;
-    gap: 5px;
-    justify-content: center;
-    align-items: center;
-    width: clamp(50px, 20vw, 80px);
-    border: none;
-    background-image: linear-gradient(45deg, rgb(13 0 38), ta);
-    background-image: linear-gradient(90deg, rgb(125 75 226), rgb(37 18 76));
-    color: white;
-    border-radius: 5px;
-    cursor: pointer;
-  } */
 }
 
 @media screen and (max-width: 992px) {
@@ -612,13 +686,8 @@ footer {
     padding: 0.5rem 0;
   }
 
-  /* .social-handle ul li img {
-    width: 3.5rem;
-  } */
-
   .about {
     flex-direction: column;
-    /* margin: 50px 0 20px; */
   }
   .about > div {
     width: 80%;
@@ -633,6 +702,10 @@ footer {
     font-size: 24px;
   }
 
+  .faded-text {
+    display: none;
+  }
+
   .box {
     background: none;
     width: 80vw;
@@ -642,6 +715,8 @@ footer {
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
+    box-shadow: none;
+    animation: none;
   }
   .box .verticle-line:nth-child(even) {
     flex-direction: row-reverse;
