--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Alice&family=Assistant:wght@500&family=Kalam:wght@300&family=Poppins:wght@300&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=Ubuntu+Mono&display=swap');
 /* VARIABLES */
 
 :root{
@@ -10,6 +10,7 @@
   /* font style */
   --UNIVERSAL-FF:  "Poppins", sans-serif; 
   --LOGO-FF: 'Dancing Script', cursive; 
+  --UBUNTU: 'Ubuntu Mono', monospace;
 
   /* BG-color */
   --UNIVERSAL-BC: #000000; 
@@ -509,7 +510,7 @@ nav ul li {
 .tech {
   max-width: 83vw;
   margin: auto;
-  height: 45vh;
+  /* height: 45vh; */
   position: relative;
 }
 
@@ -772,6 +773,75 @@ footer {
 }
 
 
+.out-container-phone{
+  display: none;
+  position: relative;
+  margin: 2em 0;
+}
+
+.out-container-phone::before{
+  content: '';
+  display: block;
+  height: 100%;
+  width: 2px;
+  background-color: white;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.out-container-phone .tech-stack{
+  width: 50%;
+}
+.tech-stack svg path{
+  fill: rgb(24 28 46 / 51%);
+  stroke: gray;
+  stroke-opacity: 2.9;  
+}
+
+.out-container-phone .tech-stack:nth-child(even) svg{
+  transform: rotateY(180deg);
+}
+
+.tech-stack{
+  position: relative;
+}
+.tech-stack h3{
+  font-family: var(--UBUNTU);
+  position: absolute;
+  letter-spacing: 0.2em;
+  top: -5%;
+}
+.tech-stack:nth-child(odd) h3{
+  right: 0;
+  z-index: -1;
+}
+.tech-stack .data{
+  width: 70%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 5px;
+}
+.data img{
+  width: 40%;
+  height: auto;
+}
+
+.out-container-phone .tech-stack:nth-child(even){
+  left: 50%;
+  transform: translateX(1em);
+}
+
+.out-container-phone .tech-stack:nth-child(odd){
+  transform: translateX(-1em);
+}
+
+
 
 @media screen and (max-width: 767px){
   .faded-text{
@@ -974,6 +1044,14 @@ footer {
     100% {
       transform: scaleY(1);
     }
+  }
+
+  .out-container{
+    display: none;
+  }
+
+  .out-container-phone{
+    display: block;
   }
 }
 
