--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ li:hover .underline{
   filter: brightness(150%);
 }
 
-nav ul {
+nav ul{
   display: flex;
   align-items: center;
 }
@@ -390,7 +390,7 @@ nav ul li {
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin: 2rem auto 0;
+  margin: 2rem auto;
 }
 
 .line{
@@ -403,7 +403,7 @@ nav ul li {
 .sub-box{
   display: grid;
   grid-template-rows: repeat(1,1fr);
-  grid-template-columns: repeat(6,1fr);
+  grid-template-columns: repeat(7,1fr);
 }
 
 .vecrticle{
@@ -443,6 +443,7 @@ nav ul li {
   display: flex;
   align-items: center;
   flex-direction: column;
+  position: relative;
 }
 
 .btn {
@@ -459,17 +460,18 @@ nav ul li {
 }
 
 .skill-note{
-  background-color:#0f0e13;
-  background-image: var(--UNIVERSAL-BG-IMG);  
+  background-color: #0f0e13;
+  background-image: var(--UNIVERSAL-BG-IMG);
   background-attachment: fixed;
   border: 1px solid var(--UNIVERSAL-FC);
   padding: 0.5rem;
   border-radius: 5px;
-  width: 150%;
+  width: 25vw;
   transition: all 5s ease-in-out;
   transform-origin: top;
   display: none;
-  position: relative;
+  position: absolute;
+  top: 100%;
   z-index: 100;
 }
 
@@ -977,7 +979,7 @@ footer {
     display: flex;
   }
 
-  nav ul {
+  nav ul{
     padding: 1rem 0;
     display: none;
     position: absolute;
@@ -1054,229 +1056,3 @@ footer {
     display: block;
   }
 }
-
-
-/*
-/* || Media queries for 1200px  
-@media screen and (max-width: 1200px) {
-  .nav-bar > div {
-    margin: 0 25px;
-    transition: 0.2s;
-  }
-  .home > div,
-  .about > div {
-    width: 40%;
-  }
-  .tech {
-    height: min(30vw, 600px);
-  }
-
-  .btn:hover,
-  .btn:focus .btn {
-    display: block;
-    width: max-content;
-    position: relative;
-    top: 50px;
-    left: -97px;
-  }
-}
-
-@media screen and (max-width: 992px) {
-  nav {
-    justify-content: center;
-    gap: min(15vw, 60px);
-    transition: 0.2s;
-  }
-  .left-info {
-    font-size: 2em;
-  }
-  .about {
-    font-size: 1rem;
-  }
-  .img-logo {
-    width: 70px;
-    position: relative;
-    top: 25px;
-    left: -35px;
-  }
-  .tech {
-    height: min(35vw, 600px);
-  }
-  .single-warap {
-    width: min(35vw, 22rem);
-    height: min(50vw, 80rem);
-  }
-}
-
-
-@media screen and (max-width: 548px) {
- 
-  .box {
-    background: none;
-    width: 80vw;
-    height: fit-content;
-    margin: 30px auto;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: column;
-    box-shadow: none;
-    animation: none;
-  }
-  .box .verticle-line:nth-child(even) {
-    flex-direction: row-reverse;
-  }
-
-  .verticle-line {
-    background: none;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: auto;
-    background-color: rgb(31 10 74);
-    padding: 0.5rem 1rem;
-    margin: 10px 0;
-    overflow: auto;
-    column-gap: 2px;
-  }
-  .verticle-line:nth-child(odd) {
-    border-radius: 10px 100px 100px 110px;
-    box-shadow: -2px 1px 8px rgb(47, 33, 87);
-  }
-  .verticle-line:nth-child(even) {
-    flex-direction: row-reverse;
-    border-radius: 100px 117px 10px 100px;
-    box-shadow: 2px 1px 8px rgb(47, 33, 87);
-  }
-
-  .verticle-line:nth-child(odd) .link {
-    border-radius: 0 100px 100px 0;
-    box-shadow: 0px 0px 17px 3px black;
-    font-size: 14px;
-  }
-  .verticle-line:nth-child(even) .link {
-    border-radius: 100px 0 0 100px;
-    box-shadow: 0px 0px 17px 3px black;
-    font-size: 14px;
-  }
-  .img-logo {
-    width: 13vw;
-    height: auto;
-    position: static;
-  }
-
-  .verticle-line img + span {
-    position: static;
-    display: inline-block;
-    width: 0px;
-    display: none;
-  }
-
-  .link {
-    display: block;
-    position: static;
-    padding: 0.5rem;
-    border-radius: 20px;
-    background: rgb(101 69 195);
-    box-shadow: 0px 0px 3px 0px rgb(182 128 255);
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    font-size: 12px;
-  }
-  .link img {
-    position: static;
-    width: 20px;
-    height: auto;
-  }
-
-  #display-548px {
-    display: block;
-  }
-
-  main hr {
-    margin: 2rem 3rem 0;
-    box-shadow: 0px 12px 25px 0px;
-  }
-
-  .flex-box {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: nowrap;
-    width: 100%;
-    margin: auto;
-  }
-
-  .single-warap {
-    display: flex;
-    justify-content: normal;
-    align-items: normal;
-    flex-direction: column;
-    row-gap: 12px;
-    width: 90%;
-    height: max-content;
-    margin: 0.8rem auto;
-  }
-
-  .go-link {
-    position: static;
-    cursor: pointer;
-    width: 40%;
-    margin: 0.5rem auto;
-  }
-  .go-link button {
-    width: 100%;
-    height: max-content;
-    font-size: 1.3em;
-    padding: 1.2px;
-  }
-  .head-desc {
-    margin-top: 0px;
-  }
-  .head-desc p {
-    padding: 5px;
-  }
-
-  .footer {
-    flex-wrap: wrap;
-    row-gap: 5px;
-    justify-content: space-around;
-  }
-  .social-handle {
-    margin-top: 10px;
-  }
-  .footer-second {
-    font-size: 14px;
-  }
-  /* .footer .social-handle ul li img {
-    width: 4em;
-  } 
-  .footer-second ul li {
-    border-bottom: 2px solid grey;
-    margin-bottom: 3px;
-  }
-  .btn {
-    display: none;
-  }
-
-  .contact-section-container {
-    width: 90%;
-  }
-}
-
-@media screen and (max-width: 360px) {
-  .no-wrap {
-    white-space: normal;
-  }
-  .btn {
-    display: none;
-  }
-}
-
-
-
-
-*/
