--- a/style.css
+++ b/style.css
@@ -349,6 +349,7 @@ nav ul li {
 }
 
 .about-me {
+  display: inline-block;
     border: 1px solid var(--PURPLE-COLOR);
     padding: 5px;
     border-radius: 20px;
