--- a/style.css
+++ b/style.css
@@ -155,9 +155,7 @@ header {
   border-radius: 0 0 10px 10px;
   transition: all 0.2s ease-in-out;
 }
-.show{
-  transform: scale(1);
-}
+
 nav {
   width: 85vw;
   max-width: 100%;
@@ -238,6 +236,15 @@ nav ul li {
   width: clamp(300px, 40vw, 600px);
   font-size: clamp(1.7rem, 4vw, 3rem);
   margin-top: 100px;
+}
+
+.left-info2{
+  transform: translateX(-100vw);
+}
+
+.slide-to-right{
+  transform: translateX(0);
+  transition: all 1s ease-out;
 }
 
 .right-img{
@@ -346,7 +353,9 @@ nav ul li {
   align-items: center;
   margin: 50px 0;
   font-size: 1.2rem;
+  opacity: 0;
 }
+
 
 .about-me {
   display: inline-block;
@@ -417,7 +426,17 @@ nav ul li {
   display: flex;
   flex-direction: column;
   align-items: center;
+  opacity: 0;
+  transform: translateY(100%);
 }
+
+.comeToTop{
+  opacity: 1;
+  transform: translateY(0%);
+  transition: all 1s;
+}
+
+
 
 .img-logo {
   width: 77px;
@@ -573,6 +592,7 @@ nav ul li {
   background: var(--PROJECTS-BG);
   box-shadow: var(--PROJECTS-BS);
   border-radius: 15px;
+  opacity: 0;
 }
 
 .faded-box {
@@ -729,13 +749,16 @@ footer {
 }
 .contact-me {
   font-size: clamp(16px, 4.2vw, 32px);
+  opacity: 0;
 }
 .contact-me-desc {
   font-size: clamp(16px, 3.2vw, 25px);
+  opacity: 0;
 }
 .contact-me-form {
   width: 100%;
   margin: 10px auto;
+  opacity: 0;
 }
 
 .form-input {
@@ -780,6 +803,7 @@ footer {
   display: none;
   position: relative;
   margin: 2em 0;
+  min-height: 70vh;
 }
 
 .out-container-phone::before{
@@ -808,6 +832,8 @@ footer {
 
 .tech-stack{
   position: relative;
+  opacity: 0;
+  margin: 8rem 0;
 }
 .tech-stack h3{
   font-family: var(--UBUNTU);
@@ -829,10 +855,13 @@ footer {
   justify-content: space-evenly;
   align-items: center;
   padding: 5px;
+  display: flex;
+  flex-wrap: wrap;
 }
 .data img{
   width: 40%;
   height: auto;
+  border-radius: 100%;
 }
 
 .out-container-phone .tech-stack:nth-child(even){
@@ -1056,4 +1085,11 @@ footer {
   .out-container-phone{
     display: block;
   }
+}
+
+
+.show{
+  transform: scale(1);
+  opacity: 1;
+  transition: all 1s;
 }
